--- a/server/views/pages/applications/history/index.njk
+++ b/server/views/pages/applications/history/index.njk
@@ -11,23 +11,8 @@
     <span class="govuk-caption-xl">Business Hub applications</span>
     <h1 class="govuk-heading-xl govuk-!-margin-top-0">{{ title }}</h1>
 
-    {{ mojSubNavigation({
-      label: 'Sub navigation',
-      items: [{
-        text: 'Application',
-        href: "/applications/" + departmentName + "/" + application.requestedBy.username + "/" + application.id
-      }, {
-        text: 'Comments',
-        href: "/applications/" + departmentName + "/" + application.requestedBy.username + "/" + application.id + "/comments"
-      }, {
-        text: 'Action and reply',
-        href: "/applications/" + departmentName + "/" + application.requestedBy.username + "/" + application.id + "/reply"
-      }, {
-        text: 'History',
-        href: "/applications/" + departmentName + "/" + application.requestedBy.username + "/" + application.id + "/history",
-        active: true
-      }]
-    }) }}
+    {% set activeTab = 'history' %}
+    {% include "../partials/sub-navigation.njk" %}
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
