--- a/server/views/pages/log-application/confirm/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/confirm/swap-visiting-orders-for-pin-credit.njk
@@ -62,10 +62,14 @@
           ]
         }) }}
 
-        {{ govukButton({
-          text: "Continue",
-          classes: "govuk-button--primary"
-        }) }}
+        <form method="POST" action="/log/confirm">
+          <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
+          
+          {{ govukButton({
+            text: "Continue",
+            classes: "govuk-button--primary"
+          }) }}
+        </form>
 
       </div>
     </div>
