--- a/server/views/pages/log-application/submit/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/submit/swap-visiting-orders-for-pin-credit.njk
@@ -18,12 +18,12 @@
       </div>
     </div>
    
-    <p class="govuk-body-l">{{ application.dept }} now has this application.</p>
+    <p class="govuk-body-l">{{ application.assignedGroup.name }} now has this application.</p>
     <p class="govuk-body">You can now:</p>
     
     <ul class="govuk-list govuk-list--bullet">
       <li>
-        <a href="/view/:application.id">View this application</a>
+        <a href="/applications/{{ application.requestedBy.username }}/{{ application.id }}">View this application</a>
       </li>
       <li>
         <a href="/log/application-type">Add another application</a>
