--- a/server/views/pages/applications/list/index.njk
+++ b/server/views/pages/applications/list/index.njk
@@ -1,7 +1,7 @@
-{%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
-{%- from "moj/components/filter/macro.njk" import mojFilter -%}
-{%- from "govuk/components/table/macro.njk" import govukTable -%}
-{%- from "govuk/components/tabs/macro.njk" import govukTabs -%}
+{% from "moj/components/sub-navigation/macro.njk" import mojSubNavigation %}
+{% from "moj/components/filter/macro.njk" import mojFilter %}
+{% from "govuk/components/table/macro.njk" import govukTable %}
+{% from "govuk/components/tabs/macro.njk" import govukTabs %}
 
 {% extends "../../../partials/layout.njk" %}
 
@@ -19,7 +19,55 @@
       </div>
 
       <div class="govuk-grid-column-three-quarters">
-        {% include './partials/tabs.njk' %}
+        {% set pendingApps %}
+          <h2 class="govuk-heading-m">Pending applications</h2>
+
+          <div class="app-results-table">
+            {{ govukTable({
+              head: [
+                { 
+                  text: "Date", 
+                  attributes: { "aria-sort": "ascending" } 
+                },
+                { text: "Application type" },
+                { text: "From" },
+                { text: "Department" },
+                { text: "" }
+              ],
+              rows: apps if status == "PENDING" else [],
+              attributes: { "data-qa": "app-results-table", "data-module": "moj-sortable-table" }
+            }) }}
+          </div>
+        {% endset -%}
+
+        {% set closedApps %}
+          <h2 class="govuk-heading-m">Closed applications</h2>
+
+          <div class="app-results-table">
+            {{ govukTable({
+              head: [
+                { 
+                  text: "Date", 
+                  attributes: { "aria-sort": "descending" } 
+                },
+                { text: "Application type" },
+                { text: "From" },
+                { text: "Department" },
+                { text: "Decision" },
+                { text: "" }
+              ],
+              rows: apps if status == "CLOSED" else [],
+              attributes: { "data-qa": "app-results-table", "data-module": "moj-sortable-table" }
+            }) }}
+          </div>
+        {% endset -%}
+
+        {{ govukTabs({
+          items: [
+            { label: "Pending", id: "pending", panel: { html: pendingApps } },
+            { label: "Closed", id: "closed", panel: { html: closedApps } }
+          ]
+        }) }}
       </div>
     </div>
   </div>
