--- a/server/views/pages/applications/view/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/applications/view/swap-visiting-orders-for-pin-credit.njk
@@ -31,7 +31,7 @@
                 text: "Department"
               },
               value: {
-                text: application.assignedGroup
+                text: application.assignedGroup.name
               },
               actions: {
                 items: [
