--- a/server/views/pages/log-application/application-details/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/application-details/swap-visiting-orders-for-pin-credit.njk
@@ -41,7 +41,7 @@
               id: "swap-vos-pin-credit-details",
               maxlength: 1000,
               threshold: 75,
-              value: fieldToValidate,
+              value: textareaValue,
               label: {
                 text: "Details (optional)",
                 classes: "govuk-label--s",
