--- a/server/views/pages/applications/list/index.njk
+++ b/server/views/pages/applications/list/index.njk
@@ -1,7 +1,5 @@
-{% from "moj/components/sub-navigation/macro.njk" import mojSubNavigation %}
 {% from "moj/components/filter/macro.njk" import mojFilter %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
-{% from "govuk/components/tabs/macro.njk" import govukTabs %}
 
 {% extends "../../../partials/layout.njk" %}
 
@@ -19,55 +17,57 @@
       </div>
 
       <div class="govuk-grid-column-three-quarters">
-        {% set pendingApps %}
-          <h2 class="govuk-heading-m">Pending applications</h2>
+        <div class="govuk-tabs">
+          <ul class="govuk-tabs__list">
+            <li class="govuk-tabs__list-item {{ 'govuk-tabs__list-item--selected' if status == 'PENDING' else '' }}">
+              <a href="/applications?status=pending" class="govuk-tabs__tab">Pending</a>
+            </li>
+            <li class="govuk-tabs__list-item {{ 'govuk-tabs__list-item--selected' if status == 'CLOSED' else '' }}">
+              <a href="/applications?status=closed" class="govuk-tabs__tab">Closed</a>
+            </li>
+          </ul>
 
-          <div class="app-results-table">
-            {{ govukTable({
-              head: [
-                { 
-                  text: "Date", 
-                  attributes: { "aria-sort": "ascending" } 
-                },
-                { text: "Application type" },
-                { text: "From" },
-                { text: "Department" },
-                { text: "" }
-              ],
-              rows: apps if status == "PENDING" else [],
-              attributes: { "data-qa": "app-results-table", "data-module": "moj-sortable-table" }
-            }) }}
-          </div>
-        {% endset -%}
-
-        {% set closedApps %}
-          <h2 class="govuk-heading-m">Closed applications</h2>
-
-          <div class="app-results-table">
-            {{ govukTable({
-              head: [
-                { 
-                  text: "Date", 
-                  attributes: { "aria-sort": "descending" } 
-                },
-                { text: "Application type" },
-                { text: "From" },
-                { text: "Department" },
-                { text: "Decision" },
-                { text: "" }
-              ],
-              rows: apps if status == "CLOSED" else [],
-              attributes: { "data-qa": "app-results-table", "data-module": "moj-sortable-table" }
-            }) }}
-          </div>
-        {% endset -%}
-
-        {{ govukTabs({
-          items: [
-            { label: "Pending", id: "pending", panel: { html: pendingApps } },
-            { label: "Closed", id: "closed", panel: { html: closedApps } }
-          ]
-        }) }}
+          {% if status == "PENDING" %}
+            <div class="govuk-tabs__panel {{ 'govuk-tabs__panel--selected' if status == 'PENDING' else '' }}" id="pending-applications">
+              <h2 class="govuk-heading-m">Pending applications</h2>
+              
+              <div class="app-results-table">
+                {{ govukTable({
+                  head: [
+                    { text: "Date", attributes: { "aria-sort": "ascending" } },
+                    { text: "Application type" },
+                    { text: "From" },
+                    { text: "Department" },
+                    { text: "" }
+                  ],
+                  rows: apps,
+                  attributes: { "data-qa": "app-results-table", "data-module": "moj-sortable-table" }
+                }) }}
+              </div>
+            </div>
+          {% endif %}
+          
+          {% if status == "CLOSED" %}
+            <div class="govuk-tabs__panel {{ 'govuk-tabs__panel--selected' if status == 'CLOSED' else '' }}" id="closed-applications">
+              <h2 class="govuk-heading-m">Closed applications</h2>
+              
+              <div class="app-results-table">
+                {{ govukTable({
+                  head: [
+                    { text: "Date", attributes: { "aria-sort": "descending" } },
+                    { text: "Application type" },
+                    { text: "From" },
+                    { text: "Department" },
+                    { text: "Decision" },
+                    { text: "" }
+                  ],
+                  rows: apps,
+                  attributes: { "data-qa": "app-results-table", "data-module": "moj-sortable-table" }
+                }) }}
+              </div>
+            </div>
+          {% endif %}
+        </div>
       </div>
     </div>
   </div>
