--- a/server/views/pages/log-application/application-details/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/application-details/swap-visiting-orders-for-pin-credit.njk
@@ -30,7 +30,7 @@
           }) }}
         {% endif %}
 
-        <span class="govuk-caption-xl">{{ appTypeTitle }}</span>
+        <span class="govuk-caption-xl">{{ appType }}</span>
         <h1 class="govuk-heading-xl govuk-!-margin-top-0">Log details</h1>
 
         <form method="POST" id="log-swap-vos-pin-credit-details">
