--- a/server/views/pages/applications/list/index.njk
+++ b/server/views/pages/applications/list/index.njk
@@ -1,5 +1,8 @@
-{% from "moj/components/filter/macro.njk" import mojFilter %}
-{% from "govuk/components/table/macro.njk" import govukTable %}
+{%- from "govuk/components/checkboxes/macro.njk" import govukCheckboxes -%}
+{%- from "govuk/components/input/macro.njk" import govukInput -%}
+{%- from "govuk/components/table/macro.njk" import govukTable -%}
+
+{%- from "moj/components/filter/macro.njk" import mojFilter -%}
 
 {% extends "../../../partials/layout.njk" %}
 
@@ -12,11 +15,11 @@
     <h1 class="govuk-heading-xl govuk-!-margin-top-0">View all applications in your prison</h1>
 
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-one-quarter">
+      <div class="govuk-grid-column-one-third">
         {% include './partials/filter.njk' %}
       </div>
 
-      <div class="govuk-grid-column-three-quarters">
+      <div class="govuk-grid-column-two-thirds">
         <div class="govuk-tabs">
           <ul class="govuk-tabs__list">
             <li class="govuk-tabs__list-item {{ 'govuk-tabs__list-item--selected' if status == 'PENDING' else '' }}">
