A small fix for the pagination view part

--- a/server/views/pages/applications/list/index.njk
+++ b/server/views/pages/applications/list/index.njk
@@ -73,7 +73,7 @@
           {% endif %}
         </div>
 
-        {% if paginationData.totalPages  %}
+        {% if paginationData.totalPages > 1 %}
           <div class="govuk-!-margin-bottom-9">
             {{ govukPagination( paginationData | toPagination( rawQuery )) }}
           </div>
