--- a/server/views/pages/applications/list/index.njk
+++ b/server/views/pages/applications/list/index.njk
@@ -1,6 +1,7 @@
 {%- from "govuk/components/checkboxes/macro.njk" import govukCheckboxes -%}
 {%- from "govuk/components/input/macro.njk" import govukInput -%}
 {%- from "govuk/components/table/macro.njk" import govukTable -%}
+{% from "govuk/components/pagination/macro.njk" import govukPagination %}
 
 {%- from "moj/components/filter/macro.njk" import mojFilter -%}
 
@@ -71,6 +72,12 @@
             </div>
           {% endif %}
         </div>
+
+        {% if paginationData.totalPages > 1 %}
+          <div class="govuk-!-margin-bottom-9">
+            {{ govukPagination( paginationData | toPagination( rawQuery )) }}
+          </div>
+        {% endif %}
       </div>
     </div>
   </div>
