Add missing jQuery path to support date column sorting

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -3,6 +3,8 @@
 {% block head %}
   <link href="{{ '/assets/css/app.css' | assetMap }}" rel="stylesheet" />
 
+  <script src="/assets/js/jquery.min.js"></script> 
+
   {% for js in feComponents.jsIncludes %}
       <script src="{{ js }}" nonce="{{ cspNonce }}"></script>
   {% endfor %}
