--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -41,4 +41,5 @@
 
 {% block bodyEnd %}
   <script type="module" src="{{ '/assets/js/app.js' | assetMap }}"></script>
+  {% block scripts %}{% endblock %}
 {% endblock %}
