--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -4,6 +4,8 @@ $path: '/assets/images/';
 $moj-page-width: 1170px;
 $govuk-page-width: $moj-page-width;
 
+@import '../node_modules/accessible-autocomplete/dist/accessible-autocomplete.min';
+
 @import 'govuk-frontend/dist/govuk/index';
 @import '@ministryofjustice/frontend/moj/all';
 @import '@ministryofjustice/hmpps-connect-dps-components/dist/assets/footer';
