remove test vals

--- a/server/views/pages/applications/list/partials/filter.njk
+++ b/server/views/pages/applications/list/partials/filter.njk
@@ -3,8 +3,7 @@
 {%- set filterOptionsHtml %}
   {{ accessibleAutocomplete({
     label: "Prisoner name or number",
-    nonce: cspNonce,
-    prisoners: ['A12345', 'John', 'Smith']
+    nonce: cspNonce
   }) }}
 
 
