--- a/server/views/pages/applications/list/partials/filter.njk
+++ b/server/views/pages/applications/list/partials/filter.njk
@@ -2,10 +2,11 @@
 
 {%- set filterOptionsHtml %}
   {{ accessibleAutocomplete({
-    label: "Prisoner name or number",
-    nonce: cspNonce
+    label: "Search by prisoner",
+    nonce: cspNonce,
+    selectedLabel: selectedPrisonerLabel,
+    selectedValue: selectedPrisonerId
   }) }}
-
 
   {{ govukCheckboxes({
     idPrefix: "group",
