RA-309: prisoner search filter (#67)
* add accessible-autocomplete and implement api endpoint

* update component

* implementation

* remove test vals

* fix search persistence

* small fix

--- a/server/views/pages/applications/list/partials/filter.njk
+++ b/server/views/pages/applications/list/partials/filter.njk
@@ -1,11 +1,11 @@
+{%- from "../../../../components/accessibleAutocomplete/macro.njk" import accessibleAutocomplete -%}
+
 {%- set filterOptionsHtml %}
-  {{ govukInput({
-    id: "prisoner",
-    name: "prisoner",
-    label: {
-      text: "Prisoner name or number",
-      classes: "govuk-label--s"
-    }
+  {{ accessibleAutocomplete({
+    label: "Search by prisoner",
+    nonce: cspNonce,
+    selectedLabel: selectedPrisonerLabel,
+    selectedValue: selectedPrisonerId
   }) }}
 
   {{ govukCheckboxes({
