add tests + code cleanup

--- a/server/views/pages/applications/list/index.njk
+++ b/server/views/pages/applications/list/index.njk
@@ -49,8 +49,8 @@
                 }) }}
               </div>
 
-              {% if paginationData.totalPages > 1 %}
-                {{ govukPagination( paginationData | toPagination( rawQuery )) }}
+              {% if pagination.totalPages > 1 %}
+                {{ govukPagination( pagination | toPagination( query )) }}
               {% endif %}
             </div>
           {% endif %}
@@ -74,8 +74,8 @@
                 }) }}
               </div>
               
-              {% if paginationData.totalPages > 1 %}
-                {{ govukPagination( paginationData | toPagination( rawQuery )) }}
+              {% if pagination.totalPages > 1 %}
+                {{ govukPagination( pagination | toPagination( query )) }}
               {% endif %}
             </div>
           {% endif %}
