--- a/server/views/pages/applications/list/index.njk
+++ b/server/views/pages/applications/list/index.njk
@@ -2,6 +2,7 @@
 {%- from "govuk/components/input/macro.njk" import govukInput -%}
 {%- from "govuk/components/table/macro.njk" import govukTable -%}
 {% from "govuk/components/pagination/macro.njk" import govukPagination %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {%- from "moj/components/filter/macro.njk" import mojFilter -%}
 
@@ -12,6 +13,20 @@
 
 {% block content %}
   <div class="govuk-body govuk-width-container govuk-!-padding-top-5 govuk-!-padding-bottom-5">
+
+    {% if error %}
+      {% set errorList = [] %}
+      
+      {% if error.message %}
+        {% set errorList = errorList.concat([{ text: error.message, href: "#prisoner" }]) %}
+      {% endif %}
+
+      {{ govukErrorSummary({
+        titleText: error.summaryTitle,
+        errorList: errorList
+      }) }}
+    {% endif %}
+
     <span class="govuk-caption-xl">Applications</span>
     <h1 class="govuk-heading-xl govuk-!-margin-top-0">View all applications in your prison</h1>
 
