--- a/server/views/pages/applications/list/partials/filter.njk
+++ b/server/views/pages/applications/list/partials/filter.njk
@@ -47,11 +47,11 @@
     categories: [
       {
         heading: { text: "Department" },
-        items: filters.selectedFilterTags.groups
+        items: filters.selectedFilters.groups
       },
       {
         heading: { text: "Application type" },
-        items: filters.selectedFilterTags.types
+        items: filters.selectedFilters.types
       }
     ]
   },
