--- a/server/views/pages/log-application/confirm/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/confirm/swap-visiting-orders-for-pin-credit.njk
@@ -17,7 +17,7 @@
           href: backLink
         }) }}
 
-        <span class="govuk-caption-xl">{{ appTypeTitle }}</span>
+        <span class="govuk-caption-xl">{{ title }}</span>
         <h1 class="govuk-heading-xl govuk-!-margin-top-0">Check details</h1>
 
         {{ govukSummaryList({
@@ -25,7 +25,7 @@
           rows: [
             {
               key: { text: "Application Type" },
-              value: { text: "Swap VOs for pin credit" },
+              value: { text: title },
               actions: { items: [] if isUpdate else [{ href: "#", text: "Change", visuallyHiddenText: "application type" }] }
             }
           ]
