--- a/server/views/pages/log-application/submit/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/submit/swap-visiting-orders-for-pin-credit.njk
@@ -9,12 +9,10 @@
   <div class="govuk-body govuk-width-container">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        
         {{ govukPanel({
-            titleText: "Application submitted",
-            html: "Swap VOs for PIN credit"
-          }) }}
-          
+          titleText: "Application submitted",
+          text: title
+        }) }}
       </div>
     </div>
    
@@ -32,6 +30,5 @@
         <a href="/">Return to applications dashboard</a>
       </li>
     </ul>
-    
   </div>
 {% endblock %}
