--- a/server/views/pages/applications/change/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/applications/change/swap-visiting-orders-for-pin-credit.njk
@@ -14,7 +14,7 @@
       href: backLink
     }) }}
 
-    <span class="govuk-caption-xl">Swap VOs for PIN credit</span>
+    <span class="govuk-caption-xl">{{ title }}</span>
     <h1 class="govuk-heading-xl govuk-!-margin-top-0">Log details</h1>
 
     <div class="govuk-width-container">
