--- a/server/views/pages/log-application/prisoner-details/index.njk
+++ b/server/views/pages/log-application/prisoner-details/index.njk
@@ -2,6 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {%- from "moj/components/date-picker/macro.njk" import mojDatePicker -%}
 
@@ -17,18 +18,48 @@
       href: "/log/application-type"
     }) }}
 
+     <div class="govuk-grid-row">
+      <div class="govuk-grid-column-one-half">
+        {% if errors %}
+          {% set errorList = [] %}
+
+          {% if errors.prisonNumber %}
+            {% set errorList = errorList.concat([{ text: errors.prisonNumber.text, href: "#prisonNumber" }]) %}
+          {% endif %}
+
+          {% if errors.dateString %}
+            {% set errorList = errorList.concat([{ text: errors.dateString.text, href: "#date" }]) %}
+          {% endif %}
+
+          {{ govukErrorSummary({
+            titleText: "There is a problem",
+            errorList: errorList
+          }) }}
+        {% endif %}
+
     <span class="govuk-caption-xl">{{ appTypeTitle }}</span>
     <h1 class="govuk-heading-xl govuk-!-margin-top-0">Log prisoner details</h1>
 
     <form method="POST" id="log-prisoner-details">
       <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
 
-      <div class="govuk-form-group govuk-!-margin-bottom-0">
+      <div class="govuk-form-group govuk-!-margin-bottom-0 {% if errors.prisonNumber %} govuk-form-group--error {% endif %}">
         <label class="govuk-label govuk-label--s" for="prisonNumber">
           Prison number
         </label>
 
-        <input class="govuk-input govuk-input--width-10" id="prison-number" name="prisonNumber" type="text" value="">
+        {% if errors.prisonNumber %}
+          <p class="govuk-error-message" id="prison-mumber-error">
+            <span class="govuk-visually-hidden">Error:</span> {{ errors.prisonNumber.text }}
+          </p>
+        {% endif %}
+
+        <input class="govuk-input govuk-input--width-10 {% if errors.prisonNumber %} govuk-input--error {% endif %}"
+         id="prison-number" 
+         name="prisonNumber" 
+         type="text" 
+         aria-describedby="prison-number-error" 
+         value="{{ prisonNumber | default('') }}">
 
         <button id="prisoner-number-lookup" class="govuk-button govuk-button--secondary" data-test="find-prisoner-button">
           Find prisoner
@@ -48,8 +79,10 @@
         name: "date",
         label: {
             text: "Date",
-            classes: "govuk-label--s"      
-        }
+            classes: "govuk-label--s"
+        },
+        errorMessage: { text: errors.dateString.text } if errors.dateString.text else undefined,
+        value: dateString | default('')
       }) }}
 
       {{ govukButton({
@@ -58,5 +91,7 @@
         attributes: { "data-test": "continue-button" }
       }) }}
     </form>
+   </div>
+   </div>
   </div>
 {% endblock %}
