--- a/server/views/pages/applications/comments/index.njk
+++ b/server/views/pages/applications/comments/index.njk
@@ -45,7 +45,7 @@
             value: "",
             label: {
               text: "Add a comment",
-              classes: "govuk-label--s",
+              classes: "govuk-label--s govuk-!-margin-bottom-4",
               isPageHeading: true
             }
           }) }}
