--- a/server/views/pages/log-application/prisoner-details/index.njk
+++ b/server/views/pages/log-application/prisoner-details/index.njk
@@ -2,6 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {%- from "moj/components/date-picker/macro.njk" import mojDatePicker -%}
 
@@ -17,46 +18,84 @@
       href: "/log/application-type"
     }) }}
 
-    <span class="govuk-caption-xl">{{ appTypeTitle }}</span>
-    <h1 class="govuk-heading-xl govuk-!-margin-top-0">Log prisoner details</h1>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-one-half">
+        {% if errors %}
+          {% set errorList = [] %}
 
-    <form method="POST" id="log-prisoner-details">
-      <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
+          {% if errors.prisonNumber %}
+            {% set errorList = errorList.concat([{ text: errors.prisonNumber.text, href: "#prisonNumber" }]) %}
+          {% endif %}
 
-      <div class="govuk-form-group govuk-!-margin-bottom-0">
-        <label class="govuk-label govuk-label--s" for="prisonNumber">
-          Prison number
-        </label>
+          {% if errors.dateString %}
+            {% set errorList = errorList.concat([{ text: errors.dateString.text, href: "#date" }]) %}
+          {% endif %}
 
-        <input class="govuk-input govuk-input--width-10" id="prison-number" name="prisonNumber" type="text" value="">
+          {{ govukErrorSummary({
+            titleText: "There is a problem",
+            errorList: errorList
+          }) }}
+        {% endif %}
 
-        <button id="prisoner-number-lookup" class="govuk-button govuk-button--secondary" data-test="find-prisoner-button">
-          Find prisoner
-        </button>
+        <span class="govuk-caption-xl">{{ appTypeTitle }}</span>
+        <h1 class="govuk-heading-xl govuk-!-margin-top-0">Log prisoner details</h1>
+
+        <form method="POST" id="log-prisoner-details">
+          <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
+
+          <div class="govuk-form-group govuk-!-margin-bottom-0 {% if errors.prisonNumber %} govuk-form-group--error {% endif %}">
+            <label class="govuk-label govuk-label--s" for="prisonNumber">
+              Prison number
+            </label>
+
+            {% if errors.prisonNumber %}
+              <p class="govuk-error-message" id="prison-mumber-error">
+                <span class="govuk-visually-hidden">Error:</span> {{ errors.prisonNumber.text }}
+              </p>
+            {% endif %}
+
+            <input class="govuk-input govuk-input--width-10 {% if errors.prisonNumber %} govuk-input--error {% endif %}"
+              id="prison-number" 
+              name="prisonNumber" 
+              type="text" 
+              aria-describedby="prison-number-error" 
+              value="{{ prisonNumber | default('') }}">
+
+            <button id="prisoner-number-lookup" class="govuk-button govuk-button--secondary" data-test="find-prisoner-button">
+              Find prisoner
+            </button>
+          </div>
+
+          {{ govukInsetText({
+            text: "",
+            classes: "govuk-!-margin-top-0 govuk-!-display-none",
+            attributes: { 
+              id: "prisoner-name-display", 
+              "aria-live": "assertive",
+              role: "alert"
+            }
+          }) }}
+
+          <input type="hidden" id="prisoner-name" name="prisonerName" value="">
+
+          {{ mojDatePicker({
+            id: "date",
+            name: "date",
+            label: {
+              text: "Date",
+              classes: "govuk-label--s"
+            },
+            errorMessage: { text: errors.dateString.text } if errors.dateString.text else undefined,
+            value: dateString | default('')
+          }) }}
+
+          {{ govukButton({
+            text: "Continue",
+            classes: "govuk-button--primary",
+            attributes: { "data-test": "continue-button" }
+          }) }}
+        </form>
       </div>
-
-      {{ govukInsetText({
-        text: "",
-        classes: "govuk-!-margin-top-0 govuk-!-display-none",
-        attributes: { id: "prisoner-name-display" }
-      }) }}
-
-      <input type="hidden" id="prisoner-name" name="prisonerName" value="">
-
-      {{ mojDatePicker({
-        id: "date",
-        name: "date",
-        label: {
-            text: "Date",
-            classes: "govuk-label--s"      
-        }
-      }) }}
-
-      {{ govukButton({
-        text: "Continue",
-        classes: "govuk-button--primary",
-        attributes: { "data-test": "continue-button" }
-      }) }}
-    </form>
+    </div>
   </div>
 {% endblock %}
