update check details routes/views for new app type

--- a/server/views/pages/applications/view/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/applications/view/swap-visiting-orders-for-pin-credit.njk
@@ -63,7 +63,7 @@
         rows: [
           { 
             key: { text: "Details" }, 
-            value: { text: application.requests[0].swapVOsToPinCreditDetails }, 
+            value: { text: application.requests[0].details }, 
             actions: { items: [{ 
               href: "/applications/" + application.requestedBy.username + "/" + application.id + "/change", 
               text: "Change", 
