--- a/server/views/pages/applications/change/index.njk
+++ b/server/views/pages/applications/change/index.njk
@@ -23,21 +23,7 @@
           <form method="POST" id="log-swap-vos-pin-credit-details">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
 
-            {{ govukCharacterCount({
-              name: "swapVosPinCreditDetails",
-              id: "swap-vos-pin-credit-details",
-              maxlength: 1000,
-              threshold: 75,
-              value: application.requestedBy.username,
-              label: {
-                text: "Details (optional)",
-                classes: "govuk-label--s",
-                isPageHeading: true
-              },
-              hint: {
-                text: "Add a brief summary, for example, if this person is a Foreign National"
-              }
-            }) }}
+            {% include "./partials/" + applicationType.value + ".njk" %}
 
             {{ govukButton({
               text: "Continue",
