--- a/server/views/pages/applications/change/partials/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/applications/change/partials/swap-visiting-orders-for-pin-credit.njk
@@ -1,6 +1,6 @@
 {{ govukCharacterCount({
-  name: "swapVosPinCreditDetails",
-  id: "swap-vos-pin-credit-details",
+  name: "details",
+  id: "details",
   maxlength: 1000,
   threshold: 75,
   value: application.requests[0].details,
